--- a/package.json
+++ b/package.json
@@ -1,11 +1,41 @@
 {
-  "name": "angualrjs-seed",
-  "description": "A starter project for angular js",
+  "name": "GitHubConstellations",
+  "description": "Look at all the stars...",
   "devDependencies": {
-        "phantomjs" : "*",
-        "karma" : "*",
-        "karma-junit-reporter" : "*",    
-        "karma-jasmine" : "*",
-        "karma-ng-scenario" : "*"
-    }
+    "phantomjs": "*",
+    "karma": "*",
+    "karma-junit-reporter": "*",
+    "karma-jasmine": "*",
+    "karma-ng-scenario": "*",
+    "grunt": "~0.4.1",
+    "grunt-contrib-connect": "~0.5.0"
+  },
+  "readmeFilename": "README.md",
+  "gitHead": "7da4b46302a2ad5a5e355d775274443313f2dac5",
+  "version": "1.0.0",
+  "main": "",
+  "directories": {
+    "test": "test"
+  },
+  "dependencies": {
+    "karma-script-launcher": "~0.1.0",
+    "grunt-contrib-connect": "~0.5.0",
+    "karma": "~0.10.2",
+    "phantomjs": "~1.9.1-9",
+    "karma-junit-reporter": "~0.1.0",
+    "karma-phantomjs-launcher": "~0.1.0",
+    "karma-chrome-launcher": "~0.1.0",
+    "karma-jasmine": "~0.1.3",
+    "karma-requirejs": "~0.1.0",
+    "karma-firefox-launcher": "~0.1.0",
+    "karma-html2js-preprocessor": "~0.1.0",
+    "grunt": "~0.4.1",
+    "karma-coffee-preprocessor": "~0.1.0",
+    "karma-ng-scenario": "~0.1.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": "",
+  "author": "Rowan Udell"
 }
