--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "karma-jasmine": "*",
     "karma-ng-scenario": "*",
     "grunt": "~0.4.1",
-    "grunt-contrib-connect": "~0.5.0"
+    "grunt-contrib-connect": "~0.5.0",
+    "grunt-karma": "~0.6.2"
   },
   "readmeFilename": "README.md",
   "gitHead": "7da4b46302a2ad5a5e355d775274443313f2dac5",
