--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "karma-ng-scenario": "*",
     "grunt": "~0.4.1",
     "grunt-contrib-connect": "~0.5.0",
-    "grunt-karma": "~0.6.2"
+    "grunt-karma": "~0.6.2",
+    "grunt-contrib-watch": "~0.5.3",
+    "connect-livereload": "~0.2.0"
   },
   "readmeFilename": "README.md",
   "gitHead": "7da4b46302a2ad5a5e355d775274443313f2dac5",
