--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
   ],
   "dependencies": {
     "angular": "~1.2.0",
-    "angular-resource": "~1.0.8",
-    "d3": "~3.3.3"
+    "angular-resource": "~1.2.0",
+    "d3": "~3.3.3",
+    "angular-route": "~1.2.0-rc.2"
   }
 }
